@@ -1,3 +1,8 @@
+Wed Mar 29 16:13:46 2000  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
+
+	* lib/target.exp (prune_warnings): Discard not-implemented
+	warnings from libgloss/libnosys non-functional functions.
+
 Thu Feb 17 20:24:21 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* baseboards/d10v.exp (gdb_init_command): Force register DMAP2 to
